// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.polling.contracts;

option java_multiple_files = true;

import "867-polling-contracts/src/main/proto/io/harness/polling/contracts/polling_payload_data.proto";

message PollingItem {
  Category category = 1;
  Qualifier qualifier = 2;
  io.harness.polling.contracts.PollingPayloadData pollingPayloadData = 3;
  string signature = 4;
  string pollingDocId = 5;
}

message Qualifier {
  string accountId = 1;
  string organizationId = 2;
  string projectId = 3;
}

message PollingResponse {
  repeated string signatures = 1;
  string accountId = 2;
  string pollingDocId = 3;
  io.harness.polling.contracts.Type type = 4;
  oneof PollInfo {
    BuildInfo buildInfo = 5;
  }
}

message BuildInfo {
  string name = 1;
  repeated string versions = 2;
}

enum Category {
  ARTIFACT = 0;
  MANIFEST = 1;
}
